# avocado-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  RUST_MIGRATION.md  YUBIKEY_TESTING.md  avocado-cli-clean.sh  avocado-cli-compile.sh  avocado-cli-install.sh  avocado.yaml  build.rs  pyproject.toml  test-arch.toml  test-explicit-arch.toml  test-external-extensions.toml  test-x86.toml  test_package_functionality.rs
.github/workflows/: ext-release.yml  ext-test.yml  pr.yml  release.yml  security-reusable.yml  test-reusable.yml
avocado/: __init__.py  __main__.py  cli.py
avocado/commands/: __init__.py  base.py  build.py  clean.py  init.py  provision.py  sdk-install.py
avocado/commands/ext/: __init__.py  build.py  clean.py  deps.py  dnf.py  image.py  install.py  list.py
avocado/commands/runtime/: __init__.py  build.py  deps.py  (+1 more)
avocado/utils/: __init__.py  config.py  container.py  output.py  target.py
configs/: default.toml  default.yaml  icam540.toml  jetson-orin-nano-devkit-nvme.toml  reterminal-dm.toml
configs/advantech/: icam-540.toml  icam-540.yaml
configs/nvidia/: jetson-orin-nano-devkit.toml  jetson-orin-nano-devkit.yaml
configs/qemu/: qemuarm64.toml  qemux86-64.toml
configs/raspberry-pi/: raspberrypi-4-model-b.toml  raspberrypi-4-model-b.yaml  raspberrypi-5.toml  raspberrypi-5.yaml
configs/seeed/: reterminal-dm.toml  reterminal-dm.yaml  reterminal.toml  reterminal.yaml
docs/: development.md  installation.md  provision-signing-quickref.md  provision-signing.md  signing-keys.md  test.md  users-and-groups.md
docs/container-dev/: phase0-findings.md  verify-vm-write-path.sh
docs/features/: docker-image-priming-var-provisioning.md  extension-versioning-redesign.md  macos-deploy-port-forwarding.md  sdk-cross-compilation-rpm-packaging.md  update-notifications.md
examples/: comprehensive-users-example.toml  comprehensive-users-example.yaml  ext-install-example.sh  signing-keys-example.yaml  sysroot-example.toml  sysroot-example.yaml
scripts/: regenerate-release-notes.sh
src/: completion.rs  lib.rs  main.rs
src/commands/: build.rs  clean.rs  config_show.rs  fetch.rs  init.rs  install.rs  load.rs  mod.rs  profiles.rs  provision.rs  prune.rs  save.rs  sign.rs  unlock.rs  update.rs  upgrade.rs
src/utils/: config.rs  config_edit.rs  container.rs  device_tree_overlay.rs  disk_writer.rs  ext_fetch.rs  host_copy.rs  image_signing.rs  install_method.rs  jcs.rs  kab_wrap.rs  kernel_resolver.rs  kernel_version.rs  lockfile.rs  mod.rs  nfs_server.rs  output.rs  output_format.rs  overlay_preprocess.rs  permissions.rs  pkcs11_devices.rs  prerequisites.rs  provision_result.rs  remote.rs  runs_on.rs  runtime.rs  runtime_extension.rs  sbom.rs  signing_keys.rs  signing_request_handler.rs  signing_service.rs  snapshot.rs  stamps.rs  target.rs  update_check.rs  update_repo.rs  update_signing.rs  user_config.rs  version.rs  vm_update_check.rs  (+1 more)
tests/: README.md  container_dev_arch.rs  container_dev_e2e.rs  container_dev_security.rs  integration.rs  interpolation.rs  pkcs11_integration_test.rs  runs_on_integration.rs  signing_integration.rs  target_precedence.rs
tests/commands/: mod.rs
tests/common/: mod.rs
tests/fixtures/: test-signing-container.sh
tests/workflows/: mod.rs
(+196 files in other folders)
