[package]
name = "avocado-cli"
version = "0.3.0"
edition = "2021"
description = "Command line interface for Avocado."
authors = ["Avocado"]
license = "MIT"
repository = "https://github.com/avocado-framework/avocado-cli"
keywords = ["cli", "build", "provisioning", "containers", "extensions"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "avocado"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "io-util",
] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
