[package]
name = "avocado-cli"
version = "0.11.0"
edition = "2021"
description = "Command line interface for Avocado."
authors = ["Avocado"]
license = "MIT"
repository = "https://github.com/avocado-framework/avocado-cli"
keywords = ["cli", "build", "provisioning", "containers", "extensions"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "avocado"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "io-util",
] }
thiserror = "1.0"
directories = "5.0.1"
reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
indicatif = "0.17.8"
futures-util = "0.3.30"
flate2 = "1.0.32"
tar = "0.4.41"
uuid = { version = "1.0", features = ["v4"] }
libc = "0.2"
walkdir = "2.4"
tempfile = "3.0"

[dev-dependencies]
tokio-test = "0.4"
serial_test = "2.0.0"
