[package]
name = "avocado-cli"
version = "0.17.2"
edition = "2021"
description = "Command line interface for Avocado."
authors = ["Avocado"]
license = "MIT"
repository = "https://github.com/avocado-framework/avocado-cli"
keywords = ["cli", "build", "provisioning", "containers", "extensions"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "avocado"
path = "src/main.rs"

[lib]
name = "avocado_cli"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "io-util",
] }
thiserror = "2.0"
directories = "6.0"
reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
indicatif = "0.18"
futures-util = "0.3.30"
flate2 = "1.0.32"
tar = "0.4.41"
uuid = { version = "1.0", features = ["v4"] }
libc = "0.2"
walkdir = "2.4"
tempfile = "3.0"
regex = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
cryptoki = "0.10"

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.0"
